--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="flex-content" style="color: gray;width: 300px;"><button>Get in touch
         </button> </div>
-        <div class="box">
+        <div class="box" >
         <svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M24 4H0V0H24V4ZM24 8H0V12H24V8ZM24 16H0V20H24V16Z" fill="white"/>
         </svg> 
@@ -235,13 +235,14 @@ experience with fortune 500 companies like Apple, Google, Facebook and <br> more
             I'm happy to chat over some coffee some time
             about how i can help your company.
         </p>
+        <div class="crest">
         <h1 style="height: 120px;">Interested in working with me?</h1>
-        <p style="color: #444;height: 70px;">
+        <p style="color: #444;height: 70px;background-color:black;">
             I'm active on all social media platform listed below,but you can
             also email me and i will get back to you in the next 24-48 hours.
             </p>
             <div class="flex-conten" style="color: #111;width: 300px;height: 50px;"><button>Get in touch
-            </button> </div>
+            </button> </div></div>
             <div class="foot">
             <div>Johnathan Specter</div>
              <div style="display: flex;">
@@ -291,7 +292,7 @@ experience with fortune 500 companies like Apple, Google, Facebook and <br> more
 
 
 
-<div class="rigid" style="background-color:gray;height: 350px;">
+<div class="rigid" style="background-color:gray;height: 450px;">
     <div class="rigson"><br> <h1 style="height: 90px;color: white;">A co-founder at one of the word's largest communities.</h1>
         <p style="color: whitesmoke;word-spacing: 4px;" >
             The combined experience I have working at 
